set(EXECUTABLE_OUTPUT_PATH ${evaluation_library_SOURCE_DIR}/test_driver/bin)
include_directories(${evaluation_library_SOURCE_DIR}/library/include)
link_directories(${evaluation_library_SOURCE_DIR}/library/src)
add_executable(test_driver main.cpp)
target_link_libraries(test_driver library)
target_link_libraries(test_driver sqlite3)
